:art: :sparkles: army green as tertiary, looks fresh and avoids too much contrast

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -7,7 +7,8 @@
 // // #d1c180
 
 // tertiary-color = #d1c180 // pink // #EA8B92
-tertiary-color = pink
+// tertiary-color = #fff //pink
+tertiary-color = #9ea8a4
 secondary-color = #8CCEFF
 primary-color = #96FFD8
 
@@ -162,7 +163,7 @@ footer
 
     .entry
       display block
-      font-size 80%
+      // font-size 80%
       color white
 
     .card
@@ -182,6 +183,7 @@ footer
     // color #fff4c0
 
     .title
+      // color primary-color
       color tertiary-color
       // color #d1c180
       // color #D5BFBD
